fix(payment-service): resolve SonarQube code smells (7/12, 5 kept as-is)
- Payment.java: OffsetDateTime.now() -> now(ZoneOffset.UTC) in both
  constructors and setStatus()'s completedAt stamp (S8688).
- PaymentService.java: same fix in delete()/deleteAllByUserId(); and
  Collectors.toList() -> toList() in getAll() (S6204) — verified the only
  caller (PaymentController.getAll) never mutates the list.
- PayPalPaymentIntegrationTest / StripePaymentIntegrationTest: replaced
  get(key)+isEqualTo with assertThat(...).containsEntry(...) (S5838).

Deliberately left (documented, not silenced):
- StripeConfig.initStripeApiKey() (S2696): reads an injected @Value field to
  set Stripe's static apiKey — can't be static without breaking DI, and the
  Stripe SDK genuinely requires this static assignment.
- PayPalPaymentResponse / StripePaymentResponse / PaymentResponse (S107, 8-11
  ctor params): no Money-like grouping exists in this codebase to reuse, and
  these are frontend-consumed response DTOs — splitting them would change the
  JSON shape the Angular Payment interface depends on for no real benefit.
- PayPalCaptureIntegrationTest (S5838): re-checked, already uses
  containsEntry — stale finding, nothing to fix.